# bandcamp_recommender

./: FIX_IMPORT_INSTRUCTIONS.md  README.md  USAGE_AS_PACKAGE.md  pyproject.toml
.cursor/rules/: adhere-to-codebase.mdc  use-uv.mdc
bandcamp_recommender/: __init__.py
bandcamp_recommender/recommendations/: __init__.py  api.py  bpm.py  driver_manager.py  scraper.py  supporter_recommender.py  tags.py
scripts/: get_overlap.py  get_random.py  get_recommendations.py  get_similar.py
src/: __init__.py  recommendations.py
src/recommendations/: __init__.py  api.py  driver_manager.py  scraper.py  supporter_recommender.py  tags.py
