[project]
name = "bandcamp-recommender"
version = "0.1.0"
description = "Bandcamp recommendation engine based on supporter purchases"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "selenium>=4.39.0",
    "selenium-wire>=5.1.0",
    "webdriver-manager>=4.0.2",
    "blinker<1.8",
    "setuptools>=80.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bandcamp_recommender"]

